Added fixes and QOL, Removed herobrine